--- a/frontends/dji-viewport/package.json
+++ b/frontends/dji-viewport/package.json
@@ -15,6 +15,7 @@
     "alova": "^3.3.1",
     "lz-string": "^1.5.0",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "tdesign-vue-next": "^1.13.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
